@@ -26,6 +26,10 @@
      [log.c log.h sshd.c]
      make signal handler termination path shorter; risky code pointed out by
      mark dowd; ok djm markus
+   - markus@cvs.openbsd.org 2006/08/18 09:15:20
+     [auth.h session.c sshd.c]
+     delay authentication related cleanups until we're authenticated and
+     all alarms have been cancelled; ok deraadt
 
 20060817
  - (dtucker) [openbsd-compat/fake-rfc2553.c openbsd-compat/setproctitle.c]
@@ -5247,4 +5251,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4491 2006/08/18 14:32:20 djm Exp $
+$Id: ChangeLog,v 1.4492 2006/08/18 14:32:46 djm Exp $
